# AmongLLMs

./: .env.example  .gitignore  Dockerfile  LEARNINGS.md  README.md  calculate_ratings.py  docker-compose.yml  fly.toml  generate_local_graphs.py  main.py  pyproject.toml  railway.toml  start.sh  utils.py
LLM_judge/: data.py  evaluation.py  parsing.py  prompts.py  visualization.py
among-agents/: pyproject.toml
among-agents/amongagents/: __init__.py
among-agents/amongagents/UI/: MapUI.py  WebMapUI.py  __init__.py
among-agents/amongagents/agent/: __init__.py  agent.py  original_prompts.py  prompts.py
among-agents/amongagents/envs/: __init__.py  action.py  game.py  task.py  tools.py
among-agents/amongagents/envs/configs/: __init__.py  agent_config.py  map_config.py
among-agents/amongagents/long_context/: __init__.py  agent.py  model_info.py  prompts.py  short_context_agent.py  token_counter.py
among-agents/amongagents/utils/: log_parser.py
evaluations/: eval.py
human_trials/: config.py  game.html  gdrive.py  r2.py  run.py  server.py
reporting/: calculate_ratings.py  season_analysis.py  season_chart.py  season_win_rates.py  win_reason_figures.py  win_reasons.py
reports/: 2025_01_22_pilot-report.ipynb  2025_01_24_multigame-logs.ipynb  2025_01_26_setup_eval.ipynb  2025_01_27_winrate_comparison.ipynb  2025_01_28_strategy_score.ipynb  2025_01_30_winrate_comparison_v2.ipynb  2025_01_30_winrate_comparison_v3.ipynb  2025_02_01_all_behaviors.ipynb  2025_02_07_instances.ipynb  2025_02_18_deception_ELO.ipynb  2025_02_24_deception_ELO_v3.ipynb  2025_02_27_sparse_autoencoders.ipynb  2025_02_28_tqa_continuations.ipynb  2025_03_25_token-wise-scores.ipynb  2025_04_29_probe_eval_on_action.ipynb  2025_04_30_less_data_probes.ipynb
tests/: test_api_url_config.py  test_concurrent_log_routing.py  test_human_role_assignment.py  test_long_context.py  test_main_role_flag.py  test_ratings.py  test_voteout.py
