[project]
name = "amongllms"
version = "0.1.0"
description = "Among Us as a sandbox for measuring and detecting agentic deception in LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core game engine
    "amongagents",
    # Human trials server
    "fastapi>=0.103.1",
    "uvicorn[standard]>=0.23.2",
    "pydantic>=2.3.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.2",
]

[project.optional-dependencies]
# For running analysis notebooks in reports/
analysis = [
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "openai>=1.32.0",
]
# For running linear probe experiments
probes = [
    "torch>=2.5.1",
    "transformer-lens>=2.11.0",
    "numpy>=2.0.2",
    "pandas>=2.2.2",
]
# Install everything
all = [
    "amongllms[analysis,probes]",
]

[tool.uv.sources]
amongagents = { path = "among-agents" }
