[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amongagents"
version = "0.1.0"
description = "Among Us game simulation for AI agent research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "networkx>=3.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
web-ui = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["amongagents*"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
